--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "minAppVersion": "0.12.0",
   "description": "Automatically move new notes to folders based on their name prefix.",
-  "author": "KaramazovBrothers",
+  "author": "Dima Korolev",
   "authorUrl": "https://github.com/KaramazovBrothers",
   "isDesktopOnly": true,
   "main": "main.js"
