--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,5 @@
   "minAppVersion": "0.12.0",
   "description": "Automatically move new notes to folders based on their name prefix.",
   "author": "Dima Korolev",
-  "authorUrl": "https://github.com/KaramazovBrothers",
-  "isDesktopOnly": true,
-  "main": "main.js"
+  "authorUrl": "https://github.com/KaramazovBrothers"
 }
